--- a/app/components/ui/Stepper/Stepper.module.css
+++ b/app/components/ui/Stepper/Stepper.module.css
@@ -7,4 +7,5 @@
   flex-direction: column;
   gap: var(--spacing8);
   width: 100%;
+  padding: 0 var(--spacing8);
 }
